fix question Box alignment and font family

--- a/css/default.css
+++ b/css/default.css
@@ -3,7 +3,7 @@ body{
 }
 
 *{
-  font-family: 'Nanum Pen Script', cursive;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 #qna, #result {
